<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/pref_cat_location">

        <SwitchPreference
                android:key="USE_DEVICE_LOCATION"
                android:title="@string/pref_title_use_device_loc"
                android:summary="@string/pref_summary_use_device_loc"
                android:defaultValue="true"
                android:disableDependentsState="true"/>
    </PreferenceCategory>

    <EditTextPreference
            android:key="CUSTOM_LOCATION"
            android:title="@string/pref_title_location"
            android:summary="@string/pref_summary_location"
            android:defaultValue="Rzeszow"
            android:dependency="USE_DEVICE_LOCATION"
            android:negativeButtonText="Cancel"
            android:positiveButtonText="Ok"/>

    <PreferenceCategory
            android:title="@string/pref_cat_units">

        <ListPreference
                android:key="UNIT_SYSTEM"
                android:title="@string/pref_title_unit_system"
                android:summary="%s"
                android:defaultValue="METRIC"
                android:entries="@array/unitSystemEntries"
                android:entryValues="@array/unitSystemValue"
                android:negativeButtonText="Cancel"/>

    </PreferenceCategory>

</PreferenceScreen>